--- a/jvmlearn/build.gradle
+++ b/jvmlearn/build.gradle
@@ -4,14 +4,16 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-
+    compileOnly 'org.powermock:powermock-module-javaagent:1.7.4'
 }
+
 jar {
     manifest {
         attributes 'Main-Class': 'com.github.jvmlearn.util.Machine'
